# SOFTPY

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  selftest.py  verify_pure_python.py
.github/workflows/: test.yml
benchmarks/: bench.py
docs/: IMPLEMENTATION.md  RANDO.md  TESTING.md  TEST_RECORD.md  conf.py  index.rst  modules.rst
src/crypto_standalone/: __init__.py  rng.py
src/crypto_standalone/asymmetric/: __init__.py  ed25519.py  nist_curves.py  rsa.py  x25519.py
src/crypto_standalone/aws/: __init__.py  sigv4.py
src/crypto_standalone/hashing/: __init__.py  sha2.py  sha3.py
src/crypto_standalone/kdf/: __init__.py  hkdf.py
src/crypto_standalone/symmetric/: __init__.py  aes.py  aes_gcm.py  avemaria.py  chacha20.py  legacy_ciphers.py  redpike.py  tea.py
src/crypto_standalone/utils/: __init__.py  digital_entropy.py  drbg.py  memory.py  random.py
tests/: conftest.py
tests/adversarial/: test_aes_gcm_wycheproof.py  test_attack_simulations.py  test_chacha20_wycheproof.py  test_ecdsa_wycheproof.py  test_ed25519_wycheproof.py  test_fuzz_hypothesis.py  test_hashes_kdf_wycheproof.py  test_rng_wycheproof.py  test_rsa_wycheproof.py  test_x25519_wycheproof.py
tests/unit/: test_aes.py  test_ave_maria_cipher.py  test_ecc.py  test_hashes.py  test_kdf_utils.py  test_legacy_ciphers.py  test_new_ciphers.py  test_rng.py  test_rsa.py
tools/: rng_tui.py
