[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/SWORDIntel/SOFTPY"
Repository = "https://github.com/SWORDIntel/SOFTPY"
Issues = "https://github.com/SWORDIntel/SOFTPY/issues"

[project]
name = "crypto-standalone"
version = "2.0.0"
description = "Military-grade pure-Python cryptography with zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Crypto Standalone Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "pytest-cov>=4.0", "flake8>=6.0"]
bench = ["pytest-benchmark>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crypto_standalone = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["crypto_standalone"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "except ImportError",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
